# sfun

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: build_and_test.yml
cmake/: sfunConfig.cmake.in
include/sfun/: assert_macros.h  asserts.h  contract.h  functional.h  interface.h  member.h  optional_ref.h  path.h  precondition.h  string_utils.h  traits.h  type_list.h  type_traits.h  utility.h  winconv.h  wstringconv.h
tests/: CMakeLists.txt  test_functional.cpp  test_indirect_member.cpp  test_member.cpp  test_optional_cpref.cpp  test_optional_ref.cpp  test_precondition.cpp  test_string.cpp  test_traits.cpp  test_type_list.cpp  test_utility.cpp
